fixed text and images spacing and dimensions on the homepage

--- a/src/pages/home.module.scss
+++ b/src/pages/home.module.scss
@@ -92,21 +92,21 @@
     /* grid-template-columns: 1fr 1fr; */
     grid-template-columns:repeat(2, 1fr);
 
-    grid-template-rows: 1fr 1fr 1fr;
-    grid-row-gap: 4em;
+    grid-template-rows: 20em 20em 20em;// 1fr 1fr 1fr;
+    grid-row-gap: 0em;
     margin-top: 2em;
 }
 
 
 .left_row_text1 {
-    margin-left: 5%; 
+    margin-left: 7%; 
     margin-right: 15%;
     align-self: center;
 }
 
 
 .left_row_text2 {
-    margin-left: 5%; 
+    margin-left: 7%; 
     margin-right: 15%;
     align-self: center;
 }
@@ -154,6 +154,8 @@
         order: 2;
     }
     .right_row_text {
+        margin-top: 5%;
+        margin-bottom: 2.5%;
         margin-left: 10%; 
         margin-right: 10%;
         order: 3;
@@ -162,6 +164,8 @@
         order: 4;
     }
     .left_row_text2 {
+        margin-top: 5%;
+        margin-bottom: 2.5%;
         margin-left: 10%; 
         margin-right: 10%;
         order: 5;
